...
  @override
  Widget build(BuildContext context) {
    if (noteModelList.isEmpty) {
      return const Center(
        child: Text(
          "Tap + Button to create a note",
          key: Key("Empty note list"),
        ),
      );
    } else {
      return ListView.builder(
        itemCount: noteModelList.length,
        itemBuilder: (context, i) {
...
